--- a/src/easv/GUI/View/Users/customerpage.fxml
+++ b/src/easv/GUI/View/Users/customerpage.fxml
@@ -13,7 +13,7 @@
    <children>
       <AnchorPane fx:id="anchorpaneid" prefHeight="724.0" prefWidth="934.0" style="-fx-background-color: #212121;" stylesheets="/easv/GUI/View/CSS/Styles.css">
          <children>
-            <Separator layoutX="262.0" layoutY="25.0" orientation="VERTICAL" prefHeight="672.0" prefWidth="0.0" style="-fx-background-color: #64dd17;" />
+            <Separator layoutX="262.0" layoutY="3.0" orientation="VERTICAL" prefHeight="724.0" prefWidth="4.0" style="-fx-background-color: #64dd17;" />
             <ChoiceBox fx:id="choicebox" layoutX="21.0" layoutY="54.0" prefHeight="25.0" prefWidth="201.0" />
             <ImageView fx:id="imageid" fitHeight="288.0" fitWidth="627.0" layoutX="286.0" layoutY="398.0" pickOnBounds="true" preserveRatio="true" />
             <JFXButton layoutX="21.0" layoutY="661.0" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="Close" textFill="WHITE">
@@ -24,6 +24,8 @@
                <font>
                   <Font size="14.0" />
                </font></Label>
+            <JFXButton fx:id="updateinfiid" layoutX="23.0" layoutY="416.0" onAction="#updatemyinfobtn" prefHeight="31.0" prefWidth="109.0" style="-fx-background-color: #64dd17; -fx-background-radius: 100;" text="update my info" />
+            <Separator layoutX="1.0" layoutY="399.0" prefHeight="1.0" prefWidth="263.0" style="-fx-background-color: #64dd17;" />
          </children></AnchorPane>
    </children>
 </StackPane>
