--- a/src/easv/GUI/View/Users/customerpage.fxml
+++ b/src/easv/GUI/View/Users/customerpage.fxml
@@ -1,22 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.text.Font?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<StackPane fx:id="stackpanid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="724.0" prefWidth="934.0" styleClass="honey" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.Users.CustomerController">
+<StackPane fx:id="stackpanid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="724.0" prefWidth="934.0" styleClass="honey" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.Users.CustomerController">
    <children>
       <AnchorPane fx:id="anchorpaneid" prefHeight="724.0" prefWidth="934.0" style="-fx-background-color: #212121;" stylesheets="/easv/GUI/View/CSS/Styles.css">
          <children>
             <Separator layoutX="262.0" layoutY="3.0" orientation="VERTICAL" prefHeight="724.0" prefWidth="4.0" style="-fx-background-color: #64dd17;" />
             <ChoiceBox fx:id="choicebox" layoutX="21.0" layoutY="54.0" prefHeight="25.0" prefWidth="201.0" />
             <ImageView fx:id="imageid" fitHeight="288.0" fitWidth="627.0" layoutX="286.0" layoutY="398.0" pickOnBounds="true" preserveRatio="true" />
-            <JFXButton layoutX="21.0" layoutY="661.0" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="Close" textFill="WHITE">
+            <JFXButton fx:id="back" layoutX="21.0" layoutY="661.0" onAction="#backbtn" style="-fx-background-radius: 90; -fx-background-color: #64dd17;" text="Close" textFill="WHITE">
                <font>
                   <Font size="15.0" />
                </font></JFXButton>
