--- a/src/easv/GUI/View/create/createevent.fxml
+++ b/src/easv/GUI/View/create/createevent.fxml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane fx:id="stackid" prefHeight="722.0" prefWidth="926.0" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.create.CreateeventController">
+<StackPane fx:id="stackid" prefHeight="722.0" prefWidth="926.0" stylesheets="/easv/GUI/View/CSS/Styles.css" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="easv.GUI.Controller.create.CreateeventController">
    <children>
       <AnchorPane fx:id="anchor" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #212121;" styleClass="changedBackgroundColor">
          <children>
@@ -51,6 +53,8 @@
                <font>
                   <Font size="15.0" />
                </font></JFXButton>
+            <ImageView fx:id="imageviewspace" fitHeight="150.0" fitWidth="200.0" layoutX="617.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true" />
+            <Button fx:id="upload" layoutX="617.0" layoutY="204.0" mnemonicParsing="false" text="upload image" />
          </children>
       </AnchorPane>
    </children>
